# usw

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  index.html
src/: cli.rs  error.rs  lib.rs  main.rs  output.rs  plugin.rs  project.rs  runtime.rs  state.rs  switch.rs  user.rs
src/commands/: create.rs  destroy.rs  env.rs  install.rs  kill.rs  logs.rs  mod.rs  monitor.rs  plugin_cmd.rs  purge.rs  sudo.rs
templates/: ai-runtime@.service
tests/: cli_integration.rs
