[package]
name = "usw"
version = "0.2.0"
edition = "2021"
description = "AI Runtime Switch — 1 Linux User = 1 AI Runtime (isolated)"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["user", "fs"] }
fs2 = "0.4"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
